- Replica set member status update when primary changes bug (Issue #635, https://github.com/alinsilvian)
- Fixed auth to work better when multiple connections are involved.
- Default connection pool size increased to 10 connections.
- Fixes for the ReadStream class to work properly with 0.8 of Node.js
- Added explain function support to aggregation helper

1.0.2 2012-05-15
----------------
- Reconnect functionality for replicaset fix for mongodb 2.0.5

1.0.1 2012-05-12
----------------
- Passing back getLastError object as 3rd parameter on findAndModify command.
- Fixed a bunch of performance regressions in objectId and cursor.
- Fixed issue #600 allowing for single document delete to be passed in remove command.

1.0.0 2012-04-25
----------------
- Fixes to handling of failover on server error
- Only emits error messages if there are error listeners to avoid uncaught events
- Server.isConnected using the server state variable not the connection pool state

0.9.9.8 2012-04-12
------------------
- _id=0 is being turned into an ObjectID (Issue #551)
- fix for error in GridStore write method (Issue #559)
- Fix for reading a GridStore from arbitrary, non-chunk aligned offsets, added test (Issue #563, https://github.com/subroutine)
- Modified limitRequest to allow negative limits to pass through to Mongo, added test (Issue #561)
- Corrupt GridFS files when chunkSize < fileSize, fixed concurrency issue (Issue #555)
- Handle dead tailable cursors (Issue #568, https://github.com/aheckmann)
- Connection pools handles closing themselves down and clearing the state
- Check bson size of documents against maxBsonSize and throw client error instead of server error, (Issue #553)
- Returning update status document at the end of the callback for updates, (Issue #569)
- Refactor use of Arguments object to gain performance (Issue #574, https://github.com/AaronAsAChimp)

0.9.9.7 2012-03-16
------------------
- Stats not returned from map reduce with inline results (Issue #542)