@@ -5,14 +5,12 @@ DONE
 - Refactor admin.js to use authdb passthrough
 - Aggregation helper
 - Read preferences for Mongos and Replicaset according to spec
-
-IN PROCESS
-- Ensure correct behavior of url string with spec
 - https://github.com/mongodb/node-mongodb-native/issues/648
 - https://github.com/mongodb/node-mongodb-native/pull/646
 - https://github.com/mongodb/node-mongodb-native/issues/640
 
 TODO
-- Merge in outstanding bug fixes
 - Attempt to get bson C++ patch in
 - Write TTL collection tests for 2.2
+- Update all documentation
+- Update to new look and feel for documentation based on mongo docs
