@@ -1151,6 +1151,10 @@ Collection.prototype.mapReduce = function mapReduce (map, reduce, options, callb
   var cmd = DbCommand.createDbCommand(this.db, mapCommandHash);
 
   this.db._executeQueryCommand(cmd, {read:false}, function (err, result) {
+    console.log("%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%")
+    console.dir(err)
+    console.dir(result.documents[0])
+
     if (err) {
       return callback(err);
     }
@@ -1167,20 +1171,29 @@ Collection.prototype.mapReduce = function mapReduce (map, reduce, options, callb
     if(result.documents[0].timing) stats['timing'] = result.documents[0].timing;
 
     // invoked with inline?
-    if (result.documents[0].results) {
+    if(result.documents[0].results) {
       return callback(null, result.documents[0].results, stats);
     }
 
-    // Create a collection object that wraps the result collection
-    self.db.collection(result.documents[0].result, function (err, collection) {
-      // If we wish for no verbosity
-      if(options['verbose'] == null || !options['verbose']) {
-        return callback(err, collection);
-      }
+    // The returned collection
+    var collection = null;
 
-      // Return stats as third set of values
-      callback(err, collection, stats);
-    });
+    // If we have an object it's a different db
+    if(result.documents[0].result != null && typeof result.documents[0].result == 'object') {
+      var doc = result.documents[0].result;
+      collection = self.db.db(doc.db).collection(doc.collection);
+    } else {
+      // Create a collection object that wraps the result collection
+      collection = self.db.collection(result.documents[0].result)
+    }
+
+    // If we wish for no verbosity
+    if(options['verbose'] == null || !options['verbose']) {
+      return callback(err, collection);
+    }
+
+    // Return stats as third set of values
+    callback(err, collection, stats);      
   });
 };
 
